grog whisper added

--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,8 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -16,6 +17,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "form-data": "^4.0.5",
+    "groq-sdk": "^0.35.0",
     "mongoose": "^8.19.3",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
